[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Player/Player.png" type="Texture" id=2]
[ext_resource path="res://Animations/Player/Idle.tres" type="Animation" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Move"
length = 0.15
step = 0.01
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:transition_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 5.27506, 0.021528, -0.454245, 1, -0.248565, -0.00415373, 0.242273, 0.00404858 ),
"times": PoolRealArray( 0, 0.15 )
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )
transition_value = 0.0

[node name="Player" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = ExtResource( 3 )
anims/Move = SubResource( 1 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
